--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "bukkit"]
 	path = bukkit
-	url = http://178.32.53.28:3000/robotia/Bukkit-API
+	url = http://178.32.53.28:3000/robotia/bukkit.git
 	branch = v1710
 [submodule "forge"]
 	path = forge
-	url = https://github.com/gamerforEA/MinecraftForge.git
+	url = https://github.com/MinecraftForge/MinecraftForge.git
 	branch = 1.7.10
