Update to Forge 1420

--- a/build.gradle
+++ b/build.gradle
@@ -58,10 +58,10 @@ def retrieveGitBranch() {
     return 'NOTGIT'
 }
 ext.mcVersion = "1.7.10"
-ext.forgeVersion = "1408"
+ext.forgeVersion = "1420"
 ext.revision = retrieveBuildNumber()
 version = "${mcVersion}-${forgeVersion}.${revision}"
-
+println "Updated Thermos version: ${version}"
 launch4j {
     jreMinVersion = '1.6.0'
 }
@@ -75,7 +75,7 @@ tasks.packageUniversal {
     'Implementation-Vendor': 'CyberdyneCC',
     'Implementation-Title': 'Thermos',
     'Implementation-Version': 'Thermos-'+project.version,
-    'Forge-Version': '10.13.3.1408',
+    'Forge-Version': '10.13.3.1420',
     'Specification-Vendor': 'Bukkit Team',
     'Specification-Title': 'Bukkit',
     'Specification-Version': '1.7.10-R0.1-SNAPSHOT'
